--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server for SPDNet",
   "main": "index.js",
   "scripts": {
-    "server": "node index.js"
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
